// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Report Config row tests > should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9 {
  margin-left: -5px;
}

.c9>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9>* {
  margin-left: 5px;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c10 {
  cursor: pointer;
}

.c3 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c3 * {
  height: inherit;
  width: inherit;
}

.c2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0a53b8;
}

.c2 :hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0a53b8;
}

@media print {
  .c10 {
    display: none;
  }
}

@media print {
  .c2 {
    color: #000;
  }
}

<body>
  <div
    id="portals"
  />
  <div>
    <tr>
      <td>
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c0"
            >
              <span>
                <span
                  class="c2"
                  name="1234"
                >
                  foo
                </span>
              </span>
            </div>
            <span
              alt="Report Config owned by admin"
              class="c3"
              data-testid="svg-icon"
              title="Report Config owned by admin"
            >
              <svg
                height="1em"
                title="Report Config owned by admin"
                viewBox="0 0 67.733 67.733"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 -229.27)"
                >
                  <g
                    transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m80 48-80 80v16 24c0 13.974 8.6676 24.922 19.266 31.172 10.598 6.2495 23.688 8.9805 36.758 8.9687 13.07-0.00844 26.155-2.7659 36.742-9.0195 10.587-6.2535 19.251-17.177 19.234-31.121v-12.498c5.9195-5.1725 11.145-7.2285 16.004-7.2285 4.8603 0 10.077 2.0579 15.996 7.2344v12.492c0 13.974 8.6676 24.922 19.266 31.172 10.598 6.2495 23.688 8.9805 36.758 8.9687 13.07-0.00844 26.155-2.7659 36.742-9.0195 10.587-6.2535 19.251-17.177 19.234-31.121v-24-16l-80-80h-24l80 80h-88v7.9043c-5.1494-2.7026-10.506-4.1856-15.996-4.1856-5.4938 0-10.852 1.4857-16.004 4.1914v-7.9102h-88l80-80h-24zm-64 96h80v16 8c0.00868 7.261-3.3006 12.268-10.709 16.645-7.4083 4.376-18.346 6.9491-29.283 6.959-10.937 0.00844-21.858-2.5564-29.268-6.9258-7.4098-4.3694-10.74-9.36-10.74-16.678v-24zm144 0h80v24c0.00868 7.261-3.3006 12.268-10.709 16.645-7.4084 4.376-18.346 6.9491-29.283 6.959-10.937 0.00844-21.858-2.5564-29.268-6.9258-7.4098-4.3694-10.74-9.36-10.74-16.678v-24z"
                      transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </div>
          <div
            class="comment"
          >
            (
            bar
            )
          </div>
        </div>
      </td>
      <td>
        <div
          class="c0"
        >
          <span>
            <a
              class="c4"
              data-testid="details-link"
              href="/reportformat/4321"
            >
              baz
            </a>
          </span>
        </div>
      </td>
      <td>
        <div
          class="c5"
        >
          <div
            class="c6 c7"
          >
            <div
              class="c8 c9"
            >
              <span
                class="c10 c3"
                data-testid="svg-icon"
                title="Move Report Config to trashcan"
              >
                <svg
                  height="1em"
                  title="Move Report Config to trashcan"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <g
                      transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                    >
                      <path
                        class="gui_icon_class"
                        d="m80 0v16 16h-80v16h256v-16h-80v-16-16h-96zm16 16h64v16h-64v-16zm-80 48 16.975 192.27h190.04l16.982-192.27h-16l-16 176h-160l-16-176h-16zm72 0v160h16v-160h-16zm64 0v160h16v-160h-16z"
                        transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                      />
                    </g>
                  </g>
                </svg>
              </span>
              <span
                class="c10 c3"
                data-testid="svg-icon"
                title="Edit Report Config"
              >
                <svg
                  height="1em"
                  title="Edit Report Config"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m221.48-0.048828-137.1 137.1-16.971 50.912 50.912-16.971 137.1-137.1-33.941-33.943zm-221.48 16.049v240h192v-128h-16.006v112.01h-160v-208.01h144.01v-15.996h-160z"
                      transform="matrix(.26458 0 0 .26458 0 229.27)"
                    />
                  </g>
                </svg>
              </span>
              <span
                class="c10 c3"
                data-testid="svg-icon"
                title="Clone Report Config"
              >
                <svg
                  height="1em"
                  title="Clone Report Config"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <g
                      transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                    >
                      <path
                        class="gui_icon_class"
                        d="m141.4 30.168c-1.4823-0.007128-2.9616 0.058813-4.4277 0.19531-11.954 1.113-24.138 7.7033-30.455 19.439-3.1389-1.2367-6.4575-1.9437-9.7246-2.0273-6.9908-0.17898-14.065 1.7188-20.543 5.0117-6.4783 3.293-12.405 8.008-16.613 14.264-4.208 6.2557-6.5548 14.557-4.6406 22.984l1.2305 2.5137c-3.9083-2.1455-8.4203-3.0951-13.154-3.0645-22.218 0.1437-49.323 21.857-41.805 42.627 6.5566 18.113 33.687 25.742 51.877 17.924l-1.6309 8.3789c8.3106 16.995 22.298 28.418 36.08 32.994 2.2111 0.73419 4.4295 1.2763 6.6406 1.6367l2.3809 31.088h16.699l2.1504-36.199c0.59144-0.51742 1.168-1.059 1.7188-1.6367 1.0854 0.71505 1.6102 1.7819 2.8672 2.5215 4.895 2.8803 10.954 5.4562 17.707 6.5469 6.7531 1.0907 14.352 0.64667 21.453-3.1328 5.0524-2.689 9.2812-7.6487 12.932-13.637 4.2379 2.5642 8.7392 4.5584 13.369 5.8047l3.4434 39.473h16.699l0.50195-39.367c12.105-3.3622 22.875-12.778 27.693-26.949 5.323-3.9336 10.102-8.8803 13.656-15.482 4.1614-7.7308 7.1974-16.744 8.1367-25.971 0.93933-9.2265-0.24635-18.982-5.5938-27.008-4.2192-6.3321-11.496-10.234-20.082-12.367-1.078-15.688-10.766-29.391-23.041-36.885-7.1074-4.3388-15.248-6.7759-23.488-5.5566-5.0031 0.74038-9.6574 3.5063-13.885 7.2383-7.2505-7.7007-17.777-11.308-28.152-11.357zm-1.1484 16.566c9.6588-0.26618 18.616 4.1856 21.471 10.951l13.701 0.82422c3.0058-5.4246 6.1954-7.2504 10.127-7.832 3.9316-0.58167 8.9212 0.6187 13.715 3.5449 9.5874 5.8526 16.946 17.994 15.736 27.799l7.1055 9.332c8.8204 0.69901 12.888 3.6439 15.35 7.3379 2.4614 3.694 3.4632 9.1624 2.8047 15.631-0.65857 6.4685-3.0136 13.637-6.1641 19.49s-7.2404 10.282-9.9102 11.822l-3.7754 5.0293c-2.7665 10.458-10.248 16.202-19.559 18.17-9.3106 1.9676-19.852-0.694-26.354-7.0234l-12.346 2.9512c-2.8351 7.32-6.2459 10.738-9.832 12.646-3.5862 1.9086-7.7828 2.3215-12.252 1.5996-4.4692-0.7218-9.0518-2.617-12.561-4.6816-3.5088-2.0646-6.1567-5.1549-5.625-4.2715l-13.84 1.8476c-0.87687 2.7976-1.9448 3.7186-4.4707 4.5176-2.526 0.79948-6.6576 0.74492-11.389-0.82617-8.2912-2.7532-17.465-10.54-23.934-20.873 8.2134-9.2351 13.878-19.863 14.562-31.428 0.76866-12.994-4.0708-26.013-12.699-37.561-0.6001-3.1117-0.06326-5.8298 2.082-9.0195 2.2398-3.3298 6.1823-6.6767 10.695-8.9707 4.513-2.294 9.5525-3.514 13.531-3.4121 3.9788 0.10215 6.4642 1.3098 7.875 3.082l13.516-3.9238c1.7112-10.295 10.121-15.671 20.498-16.637 0.64856-0.060382 1.2955-0.099441 1.9395-0.11719zm-92.283 56.48a9.335 9.6514 0 0 1 4.1699 10.605 9.335 9.6514 0 0 1-8.5586 7.2617 9.335 9.6514 0 0 1-9.248-6.2969 9.335 9.6514 0 0 1 3.0762-10.998l10.561-0.57227z"
                        transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                      />
                    </g>
                  </g>
                </svg>
              </span>
              <span
                class="c10 c3"
                data-testid="svg-icon"
                title="Export Report Config"
              >
                <svg
                  height="1em"
                  title="Export Report Config"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m182.84 0-22.627 22.627 34.912 34.912 0.00586 0.41797c-52.297 0.87749-90.488 16.002-114.25 45.082-24.491 29.975-32.506 71.388-32.887 120.84l32.002 0.25c0.35407-46.001 8.3412-79.632 25.666-100.84 16.754-20.505 43.317-32.56 89.543-33.332l-35.123 35.121 22.627 22.629 73.539-73.539-0.25-0.25 0.37891-0.37891-73.539-73.539zm-182.84 63.996v192h240v-48h-15.996v32.004h-208.01v-160h48.004v-16.004h-64z"
                      transform="matrix(.26458 0 0 .26458 0 229.27)"
                    />
                  </g>
                </svg>
              </span>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </div>
</body>
`;

exports[`Report Config row tests > should render orphan 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  margin-left: -5px;
}

.c8>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8>* {
  margin-left: 5px;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9 {
  cursor: pointer;
}

.c3 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c3 * {
  height: inherit;
  width: inherit;
}

.c2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0a53b8;
}

.c2 :hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0a53b8;
}

@media print {
  .c9 {
    display: none;
  }
}

@media print {
  .c2 {
    color: #000;
  }
}

<body>
  <div
    id="portals"
  />
  <div>
    <tr>
      <td>
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c0"
            >
              <b>
                Orphan
              </b>
              <span>
                <span
                  class="c2"
                  name="1234"
                >
                  foo
                </span>
              </span>
            </div>
            <span
              alt="Report Config owned by admin"
              class="c3"
              data-testid="svg-icon"
              title="Report Config owned by admin"
            >
              <svg
                height="1em"
                title="Report Config owned by admin"
                viewBox="0 0 67.733 67.733"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 -229.27)"
                >
                  <g
                    transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m80 48-80 80v16 24c0 13.974 8.6676 24.922 19.266 31.172 10.598 6.2495 23.688 8.9805 36.758 8.9687 13.07-0.00844 26.155-2.7659 36.742-9.0195 10.587-6.2535 19.251-17.177 19.234-31.121v-12.498c5.9195-5.1725 11.145-7.2285 16.004-7.2285 4.8603 0 10.077 2.0579 15.996 7.2344v12.492c0 13.974 8.6676 24.922 19.266 31.172 10.598 6.2495 23.688 8.9805 36.758 8.9687 13.07-0.00844 26.155-2.7659 36.742-9.0195 10.587-6.2535 19.251-17.177 19.234-31.121v-24-16l-80-80h-24l80 80h-88v7.9043c-5.1494-2.7026-10.506-4.1856-15.996-4.1856-5.4938 0-10.852 1.4857-16.004 4.1914v-7.9102h-88l80-80h-24zm-64 96h80v16 8c0.00868 7.261-3.3006 12.268-10.709 16.645-7.4083 4.376-18.346 6.9491-29.283 6.959-10.937 0.00844-21.858-2.5564-29.268-6.9258-7.4098-4.3694-10.74-9.36-10.74-16.678v-24zm144 0h80v24c0.00868 7.261-3.3006 12.268-10.709 16.645-7.4084 4.376-18.346 6.9491-29.283 6.959-10.937 0.00844-21.858-2.5564-29.268-6.9258-7.4098-4.3694-10.74-9.36-10.74-16.678v-24z"
                      transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </div>
          <div
            class="comment"
          >
            (
            bar
            )
          </div>
        </div>
      </td>
      <td>
        <div
          class="c0"
        >
          <span>
            4321
          </span>
        </div>
      </td>
      <td>
        <div
          class="c4"
        >
          <div
            class="c5 c6"
          >
            <div
              class="c7 c8"
            >
              <span
                class="c9 c3"
                data-testid="svg-icon"
                title="Move Report Config to trashcan"
              >
                <svg
                  height="1em"
                  title="Move Report Config to trashcan"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <g
                      transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                    >
                      <path
                        class="gui_icon_class"
                        d="m80 0v16 16h-80v16h256v-16h-80v-16-16h-96zm16 16h64v16h-64v-16zm-80 48 16.975 192.27h190.04l16.982-192.27h-16l-16 176h-160l-16-176h-16zm72 0v160h16v-160h-16zm64 0v160h16v-160h-16z"
                        transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                      />
                    </g>
                  </g>
                </svg>
              </span>
              <span
                class="c9 c3"
                data-testid="svg-icon"
                title="Edit Report Config"
              >
                <svg
                  height="1em"
                  title="Edit Report Config"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m221.48-0.048828-137.1 137.1-16.971 50.912 50.912-16.971 137.1-137.1-33.941-33.943zm-221.48 16.049v240h192v-128h-16.006v112.01h-160v-208.01h144.01v-15.996h-160z"
                      transform="matrix(.26458 0 0 .26458 0 229.27)"
                    />
                  </g>
                </svg>
              </span>
              <span
                class="c9 c3"
                data-testid="svg-icon"
                title="Clone Report Config"
              >
                <svg
                  height="1em"
                  title="Clone Report Config"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <g
                      transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                    >
                      <path
                        class="gui_icon_class"
                        d="m141.4 30.168c-1.4823-0.007128-2.9616 0.058813-4.4277 0.19531-11.954 1.113-24.138 7.7033-30.455 19.439-3.1389-1.2367-6.4575-1.9437-9.7246-2.0273-6.9908-0.17898-14.065 1.7188-20.543 5.0117-6.4783 3.293-12.405 8.008-16.613 14.264-4.208 6.2557-6.5548 14.557-4.6406 22.984l1.2305 2.5137c-3.9083-2.1455-8.4203-3.0951-13.154-3.0645-22.218 0.1437-49.323 21.857-41.805 42.627 6.5566 18.113 33.687 25.742 51.877 17.924l-1.6309 8.3789c8.3106 16.995 22.298 28.418 36.08 32.994 2.2111 0.73419 4.4295 1.2763 6.6406 1.6367l2.3809 31.088h16.699l2.1504-36.199c0.59144-0.51742 1.168-1.059 1.7188-1.6367 1.0854 0.71505 1.6102 1.7819 2.8672 2.5215 4.895 2.8803 10.954 5.4562 17.707 6.5469 6.7531 1.0907 14.352 0.64667 21.453-3.1328 5.0524-2.689 9.2812-7.6487 12.932-13.637 4.2379 2.5642 8.7392 4.5584 13.369 5.8047l3.4434 39.473h16.699l0.50195-39.367c12.105-3.3622 22.875-12.778 27.693-26.949 5.323-3.9336 10.102-8.8803 13.656-15.482 4.1614-7.7308 7.1974-16.744 8.1367-25.971 0.93933-9.2265-0.24635-18.982-5.5938-27.008-4.2192-6.3321-11.496-10.234-20.082-12.367-1.078-15.688-10.766-29.391-23.041-36.885-7.1074-4.3388-15.248-6.7759-23.488-5.5566-5.0031 0.74038-9.6574 3.5063-13.885 7.2383-7.2505-7.7007-17.777-11.308-28.152-11.357zm-1.1484 16.566c9.6588-0.26618 18.616 4.1856 21.471 10.951l13.701 0.82422c3.0058-5.4246 6.1954-7.2504 10.127-7.832 3.9316-0.58167 8.9212 0.6187 13.715 3.5449 9.5874 5.8526 16.946 17.994 15.736 27.799l7.1055 9.332c8.8204 0.69901 12.888 3.6439 15.35 7.3379 2.4614 3.694 3.4632 9.1624 2.8047 15.631-0.65857 6.4685-3.0136 13.637-6.1641 19.49s-7.2404 10.282-9.9102 11.822l-3.7754 5.0293c-2.7665 10.458-10.248 16.202-19.559 18.17-9.3106 1.9676-19.852-0.694-26.354-7.0234l-12.346 2.9512c-2.8351 7.32-6.2459 10.738-9.832 12.646-3.5862 1.9086-7.7828 2.3215-12.252 1.5996-4.4692-0.7218-9.0518-2.617-12.561-4.6816-3.5088-2.0646-6.1567-5.1549-5.625-4.2715l-13.84 1.8476c-0.87687 2.7976-1.9448 3.7186-4.4707 4.5176-2.526 0.79948-6.6576 0.74492-11.389-0.82617-8.2912-2.7532-17.465-10.54-23.934-20.873 8.2134-9.2351 13.878-19.863 14.562-31.428 0.76866-12.994-4.0708-26.013-12.699-37.561-0.6001-3.1117-0.06326-5.8298 2.082-9.0195 2.2398-3.3298 6.1823-6.6767 10.695-8.9707 4.513-2.294 9.5525-3.514 13.531-3.4121 3.9788 0.10215 6.4642 1.3098 7.875 3.082l13.516-3.9238c1.7112-10.295 10.121-15.671 20.498-16.637 0.64856-0.060382 1.2955-0.099441 1.9395-0.11719zm-92.283 56.48a9.335 9.6514 0 0 1 4.1699 10.605 9.335 9.6514 0 0 1-8.5586 7.2617 9.335 9.6514 0 0 1-9.248-6.2969 9.335 9.6514 0 0 1 3.0762-10.998l10.561-0.57227z"
                        transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                      />
                    </g>
                  </g>
                </svg>
              </span>
              <span
                class="c9 c3"
                data-testid="svg-icon"
                title="Export Report Config"
              >
                <svg
                  height="1em"
                  title="Export Report Config"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m182.84 0-22.627 22.627 34.912 34.912 0.00586 0.41797c-52.297 0.87749-90.488 16.002-114.25 45.082-24.491 29.975-32.506 71.388-32.887 120.84l32.002 0.25c0.35407-46.001 8.3412-79.632 25.666-100.84 16.754-20.505 43.317-32.56 89.543-33.332l-35.123 35.121 22.627 22.629 73.539-73.539-0.25-0.25 0.37891-0.37891-73.539-73.539zm-182.84 63.996v192h240v-48h-15.996v32.004h-208.01v-160h48.004v-16.004h-64z"
                      transform="matrix(.26458 0 0 .26458 0 229.27)"
                    />
                  </g>
                </svg>
              </span>
            </div>
          </div>
        </div>
      </td>
    </tr>
  </div>
</body>
`;
